<resources>
    <!-- General App Strings -->
    <string name="app_name">Æsir</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="navigation_discover">Discover</string>
    <string name="navigation_setup">Setup</string>
    <string name="navigation_debug">Debug</string>
    <string name="navigation_info">Info</string>
    <string name="setup_connection_subtitle">Device Connection Status:</string>
    <string name="unknown">Unknown Device</string>

    <!-- Main Activity Strings -->

    <!-- Discover Fragment Strings -->
    <string name="discovery_fragment_title">Find your Device</string>
    <string name="search_button_text">Search</string>
    <string name="search_button_alt_text_1">Disconnect</string>
    <string name="search_button_alt_text_2">Connecting…</string>
    <string name="search_button_alt_text_3">Searching…</string>
    <string name="search_button_alt_text_4">Loading BSI Configuration…</string>
    <string name="search_list_description">Press the button to search nearby Bluetooth Devices.
    They will appear in the list below. Click on a list item to connect to the device.</string>
    <string name="image_description_string">Device Icon Here</string>

    <!-- Local Listener Setup Fragment Strings -->
    <string name="setup_fragment_title">Setup your Local Listener</string>
    <string name="setup_instructions">Enter the MAC address for the BSI unit you wish to add to your network.
        You may also create a Friendly Name for easier tracking of the device. Hit "Add Device" when you are done.
        To add more devices to the network, simply keep adding them below.</string>
    <string name="setup_add_items_to_network_button">Add Device</string>
    <string name="setup_submit_changes">Submit Changes to Device</string>
    <string name="setup_submit_changes_alt_text_1">Submitting Configuration…</string>
    <string name="setup_submit_changes_alt_text_2">Changes Submitted</string>
    <string name="setup_mac_address_hint">MAC AA:BB:CC:DD:EE:FF</string>
    <string name="setup_friendly_name_hint">Friendly Name</string>
    <string name="setup_local_listener_setup">Local Listener Config</string>

    <!-- BSI Setup Fragment Strings -->
    <string name="bsi_fragment_title">BSI Setup for:</string>
    <string name="bsi_setup_description">To enable and setup a sensor, click the dropdown
    and select "Active". When a sensor is active you may set custom parameters for them.
    If no custom parameters are set, defaults will be used.</string>
    <string name="bsi_name">BSI Name</string>
    <string name="bsi_analog_sensor_1">Analog 1</string>
    <string-array name="bsi_spinner_options">
        <item>Not Active</item>
        <item>Active</item>
    </string-array>
    <string name="bsi_settings_header"><b><u>BSI Settings:</u></b></string>
    <string name="bsi_tx_interval">Transmission Interval (Hours)</string>
    <string name="bsi_tx_interval_hint">Time (HH)</string>
    <string name="bsi_upld_interval">Upload Size Interval (Bytes)</string>
    <string name="bsi_upld_interval_input_hint">File size in Bytes (0–4096)</string>
    <string name="sensor_settings_header"><b><u>Sensor Settings:</u></b></string>
    <string name="bsi_power_on_delay">Power On Delay (Milliseconds)</string>
    <string name="bsi_power_on_delay_input_hint">Time (ms)</string>
    <string name="bsi_measurement_interval">Measurement Interval (Min)</string>
    <string name="bsi_measurement_interval_input_hint">Time (mm)</string>
    <string name="bsi_analog_sensor_2">Analog 2</string>
    <string name="bsi_pulse_sensor">Pulse</string>
    <string name="bsi_flood_alarm_trigger_pulse">Flood Alarm trigger rate</string>
    <string name="bsi_flood_alarm_shutoff_rate">Flood Alarm shut-off rate</string>
    <string name="bsi_flood_alarm_rate_hint">Pules Per Minute (ppm)</string>
    <string name="load_config">Loading Configuration</string>

    <!-- No Device Connected Setup Fragment -->
    <string name="no_device_connected_message">There does not seam to be a device
    connected currently. Please go back to the <b>Discover</b> page and
    connect to a device to continue.</string>

    <!-- Debug Fragment Strings -->
    <string name="debug_fragment_title">Debug your Device</string>
    <string name="debug_fragment_paragraph">The following list is the returned values from your
    BSI. Use this page and the subsequent values it returns to ensure that your device is setup
    correctly and that it received the configuration as you expected.</string>
    <string name="debug_services_list_title"><u>Characteristics and Values:</u></string>
    <string name="debug_characteristics_list_title">List of Device Characteristics</string>
    <string name="debug_refresh_button">Refresh</string>
    <string name="debug_refresh_button_alt_text_1">Refreshing…</string>


    <!-- Info Fragment Strings -->
    <string name="info_fragment_title">About our Project</string>
    <string name="info_fragment_paragraph">RioT Technology Corp commissioned us to design and produce a prototype
        Bluetooth data transmission solution. Our product will replace the cables which currently connect environmental
        sensors to data logging devices.\n\nOur project consists of three parts: a device to collect/transmit the data, a
        device to receive the data, and an Android mobile application to configure the devices and the network. The
        transmitting device, we call the <b>BSI</b>, or <b>Bluetooth Sensor Interface</b>. The BSI is designed to take data from sensors,
        attached by the end user, and transmit the measurements over Bluetooth to the receiver. The receiver is called the <b>Local Listener</b>.
        The data received by the Local Listener is stored on a SD memory card. Using the Android application in conjunction with the Local Listener,
        a large network of BSI’s can be configured that will be immune to many of the negative effects experienced by wired systems.
</string>
    <string name="riot_logo_description">{Aesir and RioT Logo}</string>
    <string name="thanks">Thanks to:</string>
    <string name="project_members_heading">Project Members</string>
    <string name="riley">Riley Larche</string>
    <string name="riley_title">Android Developer</string>
    <string name="riley_phone">(778) 679–9187</string>
    <string name="riley_email">riley.larche@gmail.com</string>

    <string name="will">Will Viala</string>
    <string name="will_title">Lead Firmware Developer</string>
    <string name="will_phone">(778) 679–9187</string>
    <string name="will_email">demegran@hotmail.com</string>

    <string name="landon">Landon Brown</string>
    <string name="landon_kyrel_title">Hardware/Firmware Developer</string>
    <string name="landon_phone">(778) 679–9187</string>
    <string name="landon_email">landonbrown26@outlook.com</string>

    <string name="kyrel">Kyrel Silva</string>
    <string name="kyrel_phone">(778) 679–9187</string>
    <string name="kyrel_email">kyrel8silva@gmail.com</string>

    <!-- Strings for DeviceScanActivity -->
    <string name="unknown_device">Unknown Device</string>
</resources>
