<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/debug_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_fragment_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debug_services_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/debug_services_list_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ListView
        android:id="@+id/debug_services_list"
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/debug_services_list_title"
        app:layout_constraintTop_toBottomOf="@+id/debug_services_list_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_fragment_paragraph"
        app:layout_constraintEnd_toEndOf="@+id/debug_page_title"
        app:layout_constraintStart_toStartOf="@+id/debug_page_title"
        app:layout_constraintTop_toBottomOf="@+id/debug_page_title" />

</androidx.constraintlayout.widget.ConstraintLayout>