<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setup_bsi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setup_bsi_connection_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setup_connection_subtitle"
        app:layout_constraintStart_toStartOf="@+id/setup_bsi_title"
        app:layout_constraintTop_toBottomOf="@+id/setup_bsi_title" />

    <TextView
        android:id="@+id/setup_bsi_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/placeholder_text"
        app:layout_constraintBottom_toBottomOf="@+id/setup_bsi_connection_status_title"
        app:layout_constraintStart_toEndOf="@+id/setup_bsi_connection_status_title" />

    <TextView
        android:id="@+id/bsi_analog_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/bsi_analog_sensor_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_bsi_connection_status_title" />

    <Spinner
        android:id="@+id/bsi_analog_1_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/bsi_analog_1_text"
        app:layout_constraintTop_toTopOf="@+id/bsi_analog_1_text" />


</androidx.constraintlayout.widget.ConstraintLayout>